compiler/tests/fail/arm-m4/intrinsic_cmnS.jazz
export
fn cmn(reg u32 arg0 arg1 p) {
    reg bool n, z, c, v;
    reg u32 x;
    x = 0;
    n, z, c, v = #CMNS(arg0, arg1);
    x = 1 if n;
    [p] = x;
}
